SERVER-26190 Make waitUntilOpTimeForRead interruptible